--- a/app/src/main/res/layout/activity_halaman2.xml
+++ b/app/src/main/res/layout/activity_halaman2.xml
@@ -78,7 +78,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <LinearLayout
-                androidLid="@+id/linear_layout_profil"
+                android:id="@+id/linear_layout_profil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
@@ -108,6 +108,14 @@
 
                 <include
                     android:id="@+id/layout_ig"
+                    layout="@layout/layout_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="4dp" />
+
+                <include
+                    android:id="@+id/layout_book"
                     layout="@layout/layout_menu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
